# javascript-core-sample

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/javascript/engine/sample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: app.js
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/JavaScriptCore/: JSBaseInternal.h  JSBasePrivate.h  JSClassRef.h  JSContext.h  JSContextInternal.h  JSContextRefPrivate.h  JSExport.h  JSHeapFinalizerPrivate.h  JSManagedValue.h  JSManagedValueInternal.h  JSMarkingConstraintPrivate.h  JSObjectRef.h  JSRemoteInspector.h  JSValueInternal.h  JSVirtualMachine.h  JSVirtualMachinePrivate.h  JSWeakPrivate.h  JSWrapperMap.h  JavaScriptCore.h  ObjCCallbackFunction.h
app/src/main/java/com/example/javascript/engine/sample/: JSCallback.java  JSCallback.kt  JniUtil.kt  MainActivity.kt  NativeModule.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/javascript/engine/sample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
